deploy/manifests/base/build-runner/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: builds
  labels:
    ironbook.io/builds: "true"
